Fixing modernizer errors